# QMLTemplate

./: CMakeLists.txt  README.md
QMLTemplate/: CMakeLists.txt
QMLTemplate/src/: main.cpp
QMLTemplate/src/application/: application.cpp  application.hpp
QMLTemplate/src/application/ui/: manager.cpp  manager.hpp
QMLTemplate/src/application/ui/qml/: application.qml  qml.qrc
QMLTemplate/src/core/: defines.hpp
QMLTemplate/src/core/launcher/: launcher.cpp  launcher.hpp
QMLTemplate/src/platform/: platform.hpp
QMLTemplate/src/platform/linux/: launcher.cpp  launcher.hpp
QMLTemplate/src/platform/windows/: launcher.hpp
